fixed search bar visibility on mobile devices

--- a/wislah-style.css
+++ b/wislah-style.css
@@ -68,7 +68,7 @@ body{
 .search-bar{
     font-size: 1.5rem;
     background-color: var(--search-bar-bg-color);
-    padding: 10px 20px;
+    padding: 10px 10px 10px 20px;
     border: 1px solid gray;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
@@ -78,7 +78,7 @@ body{
 .search-bar-btn{
     font-size: 1.5rem;
     background-color: var(--search-bar-bg-color);
-    padding: 10px 20px;
+    padding: 10px 20px 10px 10px;
     border: 1px solid gray;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
